Better structure and comments

--- a/src/work-hypergraphs.ipynb
+++ b/src/work-hypergraphs.ipynb
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "9230b45f",
+   "id": "82124d01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,6 +397,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "id": "fbccd665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def classSizeDist(m, prefOnly = \"\", keyadj = None):\n",
+    "    \"\"\"\n",
+    "        Returns a dictionary giving the distribution of the sizes of the equivalence\n",
+    "        classes defined by m. An equivalence class is a group of keys of m with the same value.\n",
+    "        The resulting dictionary will have as keys the sizes of the equivalence classes, and as\n",
+    "        values the number of classes of that size.\n",
+    "        \n",
+    "        Args:\n",
+    "            m: the map to be analyzed.\n",
+    "            prefOnly: only keys with this prefix are considered.\n",
+    "            keyadj: if specified, keys are passed through this dictionary.\n",
+    "            \n",
+    "        Return:\n",
+    "            a dictionary having as keys the sizes of the equivalence classes, and as\n",
+    "            values the number of classes of that size.\n",
+    "    \"\"\"\n",
+    "    d = defaultdict(lambda: 0)\n",
+    "    for v in set(m.values()):\n",
+    "        if keyadj is not None:\n",
+    "            eqClass = set([keyadj[k] for k,w in m.items() if w==v and k.startswith(prefOnly)])\n",
+    "        else:\n",
+    "            eqClass = set([k for k,w in m.items() if w==v and k.startswith(prefOnly)])\n",
+    "        d[len(eqClass)] += 1\n",
+    "    return {k:v for k,v in d.items() if k > 0}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "id": "2316bcd8",
    "metadata": {},
@@ -418,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "46a4c536",
+   "id": "80406061",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f4000876",
+   "id": "084e8336",
    "metadata": {},
    "outputs": [
     {
@@ -540,34 +575,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "a0ca3d19",
+   "execution_count": 76,
+   "id": "3857f162",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<function <lambda> at 0x7fabcb2bdb00>, {1: 719, 2: 52, 3: 4, 14: 1, 8: 4, 4: 1, 10: 2, 5: 1, 7: 1, 20: 1})\n",
-      "defaultdict(<function <lambda> at 0x7fabcb2bdcb0>, {1: 540, 2: 13, 8: 4, 5: 2, 10: 1, 38: 1, 42: 1})\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{1: 719, 2: 52, 3: 4, 14: 1, 8: 4, 4: 1, 10: 2, 5: 1, 7: 1, 20: 1}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from collections import defaultdict\n",
-    "\n",
-    "lensM = defaultdict(lambda: 0)\n",
-    "lensR = defaultdict(lambda: 0)\n",
-    "for v in set(dd.values()):\n",
-    "    eqClass = [k for k,w in dd.items() if w == v]\n",
-    "    if eqClass[0].startswith(\"R\"):\n",
-    "        subs = set([r2ss[sr2r[k]] for k in eqClass])\n",
-    "        eqClassQ = set([sr2r[k] for k in eqClass])\n",
-    "        lensM[len(eqClassQ)] += 1\n",
-    "    else:\n",
-    "        lensR[len(eqClass)] += 1\n",
-    "print(lensM)\n",
-    "print(lensR)"
+    "classSizeDist(dd, prefOnly=\"R\", keyadj=sr2r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "46431abf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 540, 2: 13, 8: 4, 5: 2, 10: 1, 38: 1, 42: 1}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classSizeDist(dd, prefOnly=\"M\")"
    ]
   },
   {
