Now we produce the whole thing+

--- a/src/work-hypergraphs.ipynb
+++ b/src/work-hypergraphs.ipynb
@@ -2,238 +2,331 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d4364c55",
+   "execution_count": 41,
+   "id": "58e74f75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import hypernetx as hnx\n",
-    "import matplotlib as mp\n",
-    "import matplotlib.pyplot as plt\n",
-    "import networkx as nx\n",
-    "import qf.cc\n",
-    "import qf.graphs\n",
-    "import qf.morph\n",
+    "from Bio import SeqIO\n",
+    "from Bio.KEGG.REST import *\n",
+    "from Bio.KEGG.KGML import KGML_parser\n",
+    "from Bio.Graphics.KGML_vis import KGMLCanvas\n",
+    "from Bio.Graphics.ColorSpiral import ColorSpiral\n",
+    "\n",
+    "from IPython.display import Image, HTML\n",
     "import numpy as np\n",
-    "import tempfile\n",
-    "import libsbml\n",
-    "from IPython.display import Image\n",
-    "%matplotlib inline"
+    "import matplotlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "fd13da5e",
+   "execution_count": 42,
+   "id": "dfa3441f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_directed_hyperedge(H, sources, target, name=None):\n",
-    "    \"\"\"\n",
-    "    Adds a directed hyperarc to the hypergraph H. The corresponding edge has all sources (a list of nodes)\n",
-    "    and target as endpoints. The special property 'target' is associated with the edge, whose value is the target.\n",
-    "    \n",
-    "    Args:\n",
-    "        H: a `hypernetx.Hypergraph`.\n",
-    "        sources: a list containing the source nodes.\n",
-    "        target: the target node.\n",
-    "        name: name of the hyperarc.\n",
-    "    \"\"\"\n",
-    "    if name is None:\n",
-    "        name = H.number_of_edges()\n",
-    "    H.add_edge(hnx.Entity(name, sources + [target], props={'target': target}))\n",
-    "\n",
-    "def add_directed_hyperedges(H, stpairs):\n",
-    "    \"\"\"\n",
-    "    Adds a list directed hyperarcs, each specified as a pair (sources, target[, name]).\n",
-    "    \n",
-    "    Args:\n",
-    "        H: a `hypernetx.Hypergraph`.\n",
-    "        stpairs: a list containing the arcs to be added, each specified by a pair or triple (the first element\n",
-    "        being a list of sources and the target being the target). The third element, if present, is the name\n",
-    "        of the hyperarc.\n",
-    "    \"\"\"\n",
-    "    for st in stpairs:\n",
-    "        if len(st) == 2:\n",
-    "            add_directed_hyperedge(H, st[0], st[1])\n",
-    "        else:\n",
-    "            add_directed_hyperedge(H, st[0], st[1], name=st[2])\n"
+    "from hypergraphs import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c305cecd",
+   "execution_count": 43,
+   "id": "0a00c020",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hg2g(H):\n",
-    "    \"\"\"\n",
-    "    Returns the RB-graph representation of a hypergraph.\n",
-    "    \n",
-    "    Args:\n",
-    "        H: a `hypernetx.Hypergraph`, all of whose hyperedges contain a target propery, that contains the target node.\n",
-    "        \n",
-    "    Returns:\n",
-    "        - the graph.\n",
-    "        - a dictionary mapping the nodes of the returned graph to 0 (blue nodes, i.e., nodes of H) or to 1 (red nodes, i.e., hyperarcs of H).\n",
-    "    \"\"\"\n",
-    "    G = nx.MultiDiGraph()\n",
-    "    G.add_nodes_from([x.uid for x in H.nodes()])\n",
-    "    G.add_nodes_from([x.uid for x in H.edges()])\n",
-    "    dd1 = {x.uid: 0 for x in H.nodes()} # Blue nodes\n",
-    "    dd2 = {x.uid: 1 for x in H.edges()} # Red nodes\n",
-    "    dd = {**dd1, **dd2}\n",
-    "    for h in H.edges():\n",
-    "        target = h.props['target']\n",
-    "        for i,e in enumerate(h.elements):\n",
-    "            if e != target:\n",
-    "                G.add_edge(e, h.uid, label='(%s,%d,%s)' % (e, i, h.uid))\n",
-    "            else:\n",
-    "                G.add_edge(h.uid, e, label='(%s,%s)' % (h.uid, e))\n",
-    "    return G, dd"
+    "H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML(\"../../LaTeX/Data/hsa/hsa00010-sbml.xml\")\n",
+    "dd = hyper_cardon_crochemore(H)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "acd9277c",
+   "execution_count": 44,
+   "id": "476d51d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "posDict = {}\n",
-    "\n",
-    "def _visualize_hg(H, png_filename, colors = None):\n",
-    "    \"\"\"\n",
-    "        Saves a given hypergraph onto a given PNG file. Internal use only.\n",
-    "        \n",
-    "        Args:\n",
-    "            H: a `hypernetx.Hypergraph`, all of whose hyperedges contain a target propery, that contains the target node.\n",
-    "            png_filename: the name of the PNG file to be saved.\n",
-    "            colors: a dictionary of colors (i.e., values for each node; same value imply same color).\n",
-    "    \"\"\"\n",
-    "    if colors is None:\n",
-    "        col1 = {v.uid: 0 for v in H.nodes()} \n",
-    "        col2 = {h.uid: 0 for h in H.edges()}\n",
-    "        colors = {**col1, **col2}\n",
-    "    ncols = max(set(colors.values()))+1 \n",
-    "    cols = np.vstack([[0,0,0,1],plt.cm.tab10(np.arange(40))]) # 0 is black\n",
-    "    plt.ioff()\n",
-    "    fig, ax = plt.subplots()\n",
-    "    if H in posDict:\n",
-    "        posnodes = posDict[H]\n",
-    "    else:\n",
-    "        posnodes = hnx.drawing.rubber_band.layout_node_link(H)\n",
-    "        posDict[H] = posnodes\n",
-    "    hnx.drawing.draw(H, \n",
-    "                 pos = posnodes, ax=ax,\n",
-    "                 with_edge_labels=False,\n",
-    "                 edges_kwargs={\n",
-    "                     'edgecolors': [cols[colors[h.uid]] for h in H.edges()]\n",
-    "                 },\n",
-    "                 nodes_kwargs={\n",
-    "                     'facecolors': [cols[colors[v.uid]] for v in H.nodes()]\n",
-    "                 }\n",
-    "                )\n",
-    "    for h in H.edges():\n",
-    "        target = h.props['target']\n",
-    "        xtarget = posnodes[target][0]\n",
-    "        ytarget = posnodes[target][1]\n",
-    "        for e in h.elements:\n",
-    "            if e != target:\n",
-    "                xsource = posnodes[e][0]\n",
-    "                ysource = posnodes[e][1]\n",
-    "                dx = xtarget - xsource\n",
-    "                dy = ytarget - ysource\n",
-    "                ax.arrow(xsource, ysource, dx, dy, head_width=.03, head_length=.03, \n",
-    "                         length_includes_head=True, color=cols[colors[h.uid]])\n",
-    "    plt.savefig(png_filename, format=\"PNG\")\n",
-    "\n",
-    "def visualize_hg(H, colors = None):\n",
-    "    \"\"\"\n",
-    "        Visualizes a given hypergraph.\n",
-    "        \n",
-    "        Args:\n",
-    "            H: a `hypernetx.Hypergraph`, all of whose hyperedges contain a target propery, that contains the target node.\n",
-    "            colors: a dictionary of colors (i.e., values for each node; same value imply same color).\n",
-    "    \"\"\"\n",
-    "    png_filename = tempfile.NamedTemporaryFile(suffix=\".png\").name\n",
-    "    _visualize_hg(H, png_filename, colors = colors)\n",
-    "    return Image(filename=png_filename)\n",
-    "\n",
-    "def save_hg(H, png_filename, colors = None):\n",
-    "    \"\"\"\n",
-    "        Saves a given hypergraph onto a given PNG file.\n",
-    "        \n",
-    "        Args:\n",
-    "            H: a `hypernetx.Hypergraph`, all of whose hyperedges contain a target propery, that contains the target node.\n",
-    "            png_filename: the name of the PNG file to be saved.\n",
-    "            colors: a dictionary of colors (i.e., values for each node; same value imply same color).\n",
-    "    \"\"\"\n",
-    "    _visualize_hg(H, png_filename, colors = colors)"
+    "groupedReactions = mapKeys(dd, keyadj=sr2r, prefOnly=\"rn\")\n",
+    "r2gr = {}\n",
+    "for i, reactions in enumerate(groupedReactions):\n",
+    "    for reaction in reactions:\n",
+    "        r2gr[reaction] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "fbbb7649",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groupedCompounds = mapKeys(dd, prefOnly=\"C\")\n",
+    "c2gc = {}\n",
+    "for i, compounds in enumerate(groupedCompounds):\n",
+    "    for compound in compounds:\n",
+    "        c2gc[compound] = i + len(groupedReactions)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "2b4af3ca",
+   "id": "1e1938ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hyper_cardon_crochemore(H, nodes_only=False):\n",
-    "    \"\"\"\n",
-    "        Performs naive vertex refinement on the hypegraph H. \n",
-    "        \n",
-    "        Args:\n",
-    "            H: the hypergraph.\n",
-    "            nodes_only: if set, only nodes of the hypergraph are considered.\n",
-    "            \n",
-    "        Returns:\n",
-    "            a dictionary whose keys are the nodes (and possibly the hyperarcs) of H, and where two keys \n",
-    "            are in the same equivalence class iff they have the same value. Note that node classes and\n",
-    "            hyperarc classes are always disjoint.\n",
-    "    \"\"\"\n",
-    "    G, dd = hg2g(H)\n",
-    "    cc = qf.cc.cardon_crochemore(G, starting_label=dd)\n",
-    "    if nodes_only:\n",
-    "        for x in G.nodes():\n",
-    "            if dd[x] == 1:\n",
-    "                del cc[x]\n",
-    "    return cc"
+    "ncols = len(groupedReactions) + len(groupedCompounds) + 1 \n",
+    "rgbCols = np.vstack([[0,0,0,1],plt.cm.tab20(np.arange(ncols))]) # 0 is black\n",
+    "cols = [matplotlib.colors.rgb2hex(c) for c in rgbCols]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "3c3a8a7f",
+   "execution_count": 58,
+   "id": "101489f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C00033': 14, 'C00469': 14}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c2gc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "4c36e744",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
+    "pathway = KGML_parser.read(kegg_get(\"hsa00010\", \"kgml\"))\n",
+    "canvas = KGMLCanvas(pathway)\n",
+    "canvas.import_imagemap = True\n",
+    "canvas.draw(\"/Users/boldi/Desktop/a.pdf\")\n",
     "\n",
-    "def read_hg_from_csv(filename, max_lines = -1):\n",
-    "    \"\"\"\n",
-    "        Reads and returns a hypergraph from a CSV file. The file contains one triple per line,\n",
-    "        where the first two elements are the sources and the last element is the target.\n",
-    "        \n",
-    "        Args:\n",
-    "            filename: the name of the CSV file.\n",
-    "            max_lines: stop after reading this number of lines (-1 for all).\n",
-    "            \n",
-    "        Returns:\n",
-    "            a hypergraph\n",
-    "    \"\"\"\n",
-    "    H = hnx.Hypergraph()\n",
-    "    n = 0\n",
-    "    with open(filename) as f:\n",
-    "        reader = csv.reader(f)\n",
-    "        for triple in reader:\n",
-    "            if max_lines >= 0 and n >= max_lines:\n",
-    "                break        \n",
-    "            add_directed_hyperedge(H, [triple[0], triple[1]], triple[2])\n",
-    "            n += 1\n",
-    "    return H"
+    "for k in pathway.entries:\n",
+    "    t = pathway.entries[k].type\n",
+    "    if t == \"gene\" or t == \"ortholog\":\n",
+    "        reaction = \"rn\" + pathway.entries[k].reaction[3:]\n",
+    "        if reaction in r2gr:\n",
+    "            pathway.entries[k].graphics[0].bgcolor = cols[r2gr[reaction]]\n",
+    "    elif t == \"compound\":\n",
+    "        compound = pathway.entries[k].name[4:]\n",
+    "        if compound in c2gc:\n",
+    "            pathway.entries[k].graphics[0].bgcolor = cols[c2gc[compound]]\n",
+    "canvas = KGMLCanvas(pathway)\n",
+    "canvas.import_imagemap = True\n",
+    "canvas.draw(\"/Users/boldi/Desktop/b.pdf\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fd13da5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18 gene rn:R01070\n",
+      "42 gene rn:R00710\n",
+      "43 ortholog rn:R00229\n",
+      "44 gene rn:R00711\n",
+      "45 compound \n",
+      "46 map \n",
+      "47 map \n",
+      "48 ortholog rn:R00755\n",
+      "49 gene rn:R00746\n",
+      "50 gene rn:R00754\n",
+      "51 ortholog rn:R00014\n",
+      "52 gene rn:R00014\n",
+      "53 gene rn:R03270\n",
+      "54 gene rn:R02569\n",
+      "55 gene rn:R00703\n",
+      "56 map \n",
+      "57 gene rn:R00200\n",
+      "58 map \n",
+      "59 gene rn:R00658\n",
+      "60 gene rn:R01518\n",
+      "61 gene rn:R01061\n",
+      "62 gene rn:R01015\n",
+      "63 gene rn:R04779\n",
+      "64 gene rn:R04780\n",
+      "65 ortholog rn:R02738\n",
+      "66 gene rn:R02740\n",
+      "67 gene rn:R00959\n",
+      "68 gene rn:R03321\n",
+      "69 gene rn:R01600\n",
+      "70 gene rn:R01600\n",
+      "71 gene rn:R02739\n",
+      "72 ortholog rn:R02739\n",
+      "73 gene rn:R01602\n",
+      "74 gene rn:R01786\n",
+      "75 gene rn:R01786\n",
+      "76 gene rn:R01788\n",
+      "77 ortholog rn:R00947\n",
+      "78 map \n",
+      "79 gene rn:R07618\n",
+      "80 gene rn:R01512\n",
+      "81 ortholog rn:R02189\n",
+      "82 ortholog rn:R02187\n",
+      "83 ortholog rn:R05132\n",
+      "84 ortholog rn:R04394\n",
+      "85 ortholog rn:R05133\n",
+      "86 ortholog rn:R05134\n",
+      "87 compound \n",
+      "88 compound \n",
+      "89 compound \n",
+      "90 compound \n",
+      "91 compound \n",
+      "92 compound \n",
+      "93 compound \n",
+      "94 compound \n",
+      "95 compound \n",
+      "96 compound \n",
+      "97 compound \n",
+      "98 compound \n",
+      "99 compound \n",
+      "100 compound \n",
+      "101 compound \n",
+      "102 compound \n",
+      "103 compound \n",
+      "104 compound \n",
+      "105 compound \n",
+      "106 compound \n",
+      "107 compound \n",
+      "108 compound \n",
+      "109 compound \n",
+      "110 compound \n",
+      "111 compound \n",
+      "112 compound \n",
+      "117 gene rn:R00431 rn:R00726\n",
+      "118 compound \n",
+      "120 ortholog rn:R09127\n",
+      "121 ortholog rn:R00341\n",
+      "124 ortholog rn:R00754\n",
+      "126 map \n",
+      "127 ortholog rn:R01061 rn:R01063\n",
+      "129 ortholog rn:R07159\n",
+      "130 ortholog rn:R01058\n",
+      "133 ortholog rn:R01196\n",
+      "134 compound \n",
+      "137 gene rn:R01516\n",
+      "138 gene rn:R01662\n",
+      "139 compound \n",
+      "140 gene rn:R00235\n",
+      "142 ortholog rn:R09084\n",
+      "143 gene rn:R09085\n",
+      "144 gene rn:R09086\n",
+      "145 ortholog rn:R05198\n",
+      "146 compound \n",
+      "147 ortholog rn:R01518\n",
+      "148 ortholog rn:R00711\n",
+      "150 gene rn:R09532\n",
+      "151 map \n",
+      "152 ortholog rn:R01058 rn:R10860\n",
+      "154 ortholog rn:R01196\n",
+      "156 ortholog rn:R02073\n",
+      "157 ortholog rn:R09479\n",
+      "158 ortholog rn:R00206\n",
+      "159 ortholog rn:R00199\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in pathway.entries:\n",
+    "    print(k, pathway.entries[k].type, pathway.entries[k].reaction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c305cecd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "canvas = KGMLCanvas(pathway)\n",
+    "canvas.import_imagemap = True\n",
+    "canvas.draw(\"/Users/boldi/Desktop/b.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2b4af3ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['K01905...',\n",
+       " 'K01568',\n",
+       " 'K01568',\n",
+       " 'K02777...',\n",
+       " 'K01792',\n",
+       " 'K01085...',\n",
+       " 'K00886',\n",
+       " 'K00886',\n",
+       " 'K02777...',\n",
+       " 'K02777...',\n",
+       " 'K01222...',\n",
+       " 'K01222...',\n",
+       " 'K14028...',\n",
+       " 'K01610',\n",
+       " 'K04022',\n",
+       " 'K00150',\n",
+       " 'K11389',\n",
+       " 'K00131',\n",
+       " 'K00169...',\n",
+       " 'K00918',\n",
+       " 'K00114',\n",
+       " 'K15633...',\n",
+       " 'K00138',\n",
+       " 'K18978',\n",
+       " 'K00174...',\n",
+       " 'K00895...',\n",
+       " 'K22473...',\n",
+       " 'K01006',\n",
+       " 'K01007']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x.graphics[0].name for x in pathway.orthologs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3c3a8a7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Graphics' object has no attribute 'orthologs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[41], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpathway\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreaction_entries\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgraphics\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43morthologs\u001b[49m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Graphics' object has no attribute 'orthologs'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1319,7 +1412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
